# teeworldsserver

./: CMakeLists.txt  README.md  configwidget.h  gametypeconfigwidget.h  lanconfigwidget.h  mainwindow.cpp  mainwindow.h  mapconfigwidget.cpp  mapconfigwidget.h  maxplayersconfigwidget.h  maxscoreconfigwidget.h  passwordconfigwidget.h  servernameconfigwidget.h  teamdamageconfigwidget.h  teeworldsserver.qrc  timelimitconfigwidget.h
